--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "expo-checkbox": "~4.1.4",
+    "@react-native-picker/picker": "2.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
